[Client-Server-Communication] Add Server
- Implement API
- Add API documentation

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # MongoDB
 spring.datasource.url=jdbc:mongodb://localhost:27017/drunks
-spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.username=drunks
+spring.datasource.password=sknurd
