--- a/server/.gitignore
+++ b/server/.gitignore
@@ -4,7 +4,7 @@ drunks-data/*
 
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+!../.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
