--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>20</java.version>
+        <spring-boot.version>3.1.1</spring-boot.version>
+        <jackson.version>2.15.2</jackson.version>
         <slf4j.version>2.20.0</slf4j.version>
         <log4j.version>2.17.2</log4j.version>
         <junit.version>5.9.2</junit.version>
         <mockito.version>4.5.1</mockito.version>
-        <spring-boot.version>3.1.1</spring-boot.version>
     </properties>
 
     <dependencyManagement>
