[Drunks] Update UI & User
- Raise stdout log level

--- a/client/src/main/resources/log4j2.properties
+++ b/client/src/main/resources/log4j2.properties
@@ -11,4 +11,4 @@ appender.file.layout.pattern=[%-5level] %n%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1}
 appender.file.filter.threshold.type = ThresholdFilter
 appender.file.filter.threshold.level = ERROR
 
-rootLogger=DEBUG, STDOUT, LOGFILE
+rootLogger=INFO, STDOUT, LOGFILE
